--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
   </head>
   <body>
     <a-scene>
-      
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
-      sfdjsdlfkjsdf
+      <a-box color="green" width="2" height="1" depth="1 "></a-box>
     </a-scene>
   </body>
 </html>
