--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <html>
   <head>
-    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+   
   </head>
   <body>
-    <a-scene>
-      <a-box color="green" width="2" height="1" depth="1 "></a-box>
-    </a-scene>
+   <h1>hello!</h1>
   </body>
 </html>
