--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <html>
   <head>
-   
+    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
   </head>
   <body>
-   <h1>hello!</h1>
+    <a-scene>
+      <a-box width="1" height="1" depth="1"
+        position="0 4 0" 
+        scale="1 2.5 1"
+        src="img/texture.jpg"></a-box>
+     
+    </a-scene>
   </body>
 </html>
