--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
   </head>
   <body>
     <a-scene>
+      <a-assets>
+        <img id="texture" src="img/texture.jpg"></img>
+      </a-assets>
       <a-box width="1" height="1" depth="1"
-        position="0 4 0" 
+        position="0 5 0"
+        roatation="45 45 45" 
         scale="1 2.5 1"
-        src="img/texture.jpg"></a-box>
-     
+        src="#texture"></a-box>
+        
     </a-scene>
   </body>
 </html>
